# lazy-cli

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.bat  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PLUGIN_GUIDE.md  QUICK_START.md
lazy_cli/: __init__.py  main.py
lazy_cli/core/: __init__.py  config.py  plugin_loader.py  utils.py
lazy_cli/plugins/: __init__.py  _template.py  organize_files.py
tests/: __init__.py  test_plugin_loader.py
tests/test_plugins/: test_organize_files.py
